# TelegramLoggingHandler

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
src/scripts/: get_chat_id.py
src/telegram_logging_handler/: handler.py
